--- a/pages/blog.html
+++ b/pages/blog.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="stylesheet" href="./dist/css/style.min.css" />
-    <script src="./script.js" defer></script>
-    <title>E-commerce</title>
+    <title>Food - Blog</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Blog</h1>
+  </body>
 </html>
