--- a/main.html
+++ b/main.html
@@ -21,19 +21,27 @@
   <body>
     <header>
       <div class="logo">
-        <a href="/main.html">
+        <a href="/main.html"
+          >Food
           <i class="fa-solid fa-shrimp"></i>
         </a>
       </div>
-      <div class="pages">
-        <ul>
+      <nav>
+        <ul class="pages">
           <li><a href="./pages/contact.html">Contact</a></li>
           <li><a href="./pages/blog.html">Blog</a></li>
           <li><a href="./pages/about.html">About</a></li>
           <li><a href="./pages/shop.html">Shop</a></li>
           <li><a href="./pages/cart.html">Cart</a></li>
         </ul>
-      </div>
+      </nav>
     </header>
+
+    <main>
+      <div class="inner-main">
+        <h1>Healthy And Delicious Food</h1>
+        <button class="shop-btn">Shop Now</button>
+      </div>
+    </main>
   </body>
 </html>
