Replacing api and adding styling

--- a/main.html
+++ b/main.html
@@ -46,22 +46,8 @@
     </main>
 
     <section class="food-sec">
-      <h1>Our Most Popular <strong>Mexican</strong> Meals</h1>
-      <div class="food-display" id="food-display">
-        <div class="meal">
-          <div class="meal-img">
-            <img src="./imgs/main-backgroundImg.jpg" alt="" />
-          </div>
-          <div class="meal-txt">
-            <h3>Food name</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore
-              voluptatem dolores tempora.
-            </p>
-            <button type="button">Buy</button>
-          </div>
-        </div>
-      </div>
+      <h1>Our Most <strong>Popular</strong> Meals</h1>
+      <div class="food-display" id="food-display"></div>
     </section>
 
     <footer>
