--- a/pages/blog.html
+++ b/pages/blog.html
@@ -3,9 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <script
+      src="https://kit.fontawesome.com/777c2cc2af.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Changa+One&family=Familjen+Grotesk:wght@400;600;700&family=Hanken+Grotesk:ital,wght@1,800&family=Manrope:wght@200&family=Mulish:wght@300;400;600&family=Nanum+Myeongjo&family=Noto+Sans+NKo+Unjoined&family=Playfair+Display&family=Poppins:wght@300;400;600&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- <script src="./js/script.js" defer></script> -->
+
+    <link rel="stylesheet" href="../dist/css/style.min.css" />
     <title>Food - Blog</title>
   </head>
+
   <body>
-    <h1>Blog</h1>
+    <!-- Header -->
+    <header>
+      <div class="logo">
+        <a href="./home.html"
+          >Food
+          <i class="fa-solid fa-shrimp"></i>
+        </a>
+      </div>
+      <nav>
+        <ul class="pages">
+          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="./blog.html">Blog</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./shop.html">Shop</a></li>
+          <li><a href="./cart.html">Cart</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <h1 style="color: purple">Hello Blog</h1>
+
+    <!-- Footer -->
+    <footer>
+      <p>© 2023 Food Company</p>
+      <div>
+        <ul class="social-links">
+          <li><i class="fa-brands fa-facebook"></i></li>
+          <li><i class="fa-brands fa-telegram"></i></li>
+          <li><i class="fa-brands fa-linkedin"></i></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
