--- a/pages/home.html
+++ b/pages/home.html
@@ -16,7 +16,7 @@
     />
     <!-- Google Fonts and Font Aweasome -->
 
-    <script src="../js/script.js" defer></script>
+    <script src="../js/script.js" type="module" defer></script>
 
     <link rel="stylesheet" href="../dist/css/style.min.css" />
     <title>Food - Home</title>
@@ -43,7 +43,7 @@
     </header>
 
     <!-- Main  -->
-    <main>
+    <main class="main">
       <div class="inner-main">
         <h1>Healthy And Delicious Food</h1>
         <a class="shop-btn" href="./shop.html">Meal Now</a>
