Adding cart html and styling

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -36,12 +36,63 @@
           <li><a href="./blog.html">Blog</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./shop.html">Shop</a></li>
-          <li><a href="./cart.html">Cart</a></li>
+          <li>
+            <a href="./cart.html"
+              >Cart <i class="fa-solid fa-cart-shopping"></i
+            ></a>
+          </li>
         </ul>
       </nav>
     </header>
 
-    <h1 style="color: purple">Hello Cart</h1>
+    <!-- Cart Section -->
+    <section class="cart">
+      <div class="cart-display">
+        <h1>Cart:</h1>
+
+        <div class="cart-item">
+          <div class="cart-img">
+            <img src="/imgs/home-back-img.jpg" alt="" />
+          </div>
+          <div class="cart-info">
+            <h3 class="cart-info-name">Beef</h3>
+            <span class="cart-info-price">330$</span>
+            <div class="cart-info-amount">
+              <span>Amount: <strong>3</strong></span>
+              <button class="cart-info-add-btn" type="button">Add more</button>
+            </div>
+          </div>
+        </div>
+        <div class="cart-item">
+          <div class="cart-img">
+            <img src="/imgs/home-back-img.jpg" alt="" />
+          </div>
+          <div class="cart-info">
+            <h3 class="cart-info-name">Beef</h3>
+            <span class="cart-info-price">330$</span>
+            <div class="cart-info-amount">
+              <span>Amount: <strong>3</strong></span>
+              <button class="cart-info-add-btn" type="button">Add more</button>
+            </div>
+          </div>
+        </div>
+        <div class="cart-item">
+          <div class="cart-img">
+            <img src="/imgs/home-back-img.jpg" alt="" />
+          </div>
+          <div class="cart-info">
+            <h3 class="cart-info-name">Beef</h3>
+            <span class="cart-info-price">330$</span>
+            <div class="cart-info-amount">
+              <span>Amount: <strong>3</strong></span>
+              <button class="cart-info-add-btn" type="button">Add more</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="summary">Total price: <strong> 1000$</strong></div>
+      </div>
+    </section>
 
     <!-- Footer -->
     <footer>
