--- a/pages/about.html
+++ b/pages/about.html
@@ -36,7 +36,11 @@
           <li><a href="./blog.html">Blog</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./shop.html">Shop</a></li>
-          <li><a href="./cart.html">Cart</a></li>
+          <li>
+            <a href="./cart.html"
+              >Cart <i class="fa-solid fa-cart-shopping"></i
+            ></a>
+          </li>
         </ul>
       </nav>
     </header>
