--- a/pages/home.html
+++ b/pages/home.html
@@ -37,7 +37,11 @@
           <li><a href="./blog.html">Blog</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./shop.html">Shop</a></li>
-          <li><a href="./cart.html">Cart</a></li>
+          <li>
+            <a href="./cart.html"
+              >Cart <i class="fa-solid fa-cart-shopping"></i
+            ></a>
+          </li>
         </ul>
       </nav>
     </header>
